# hudhook-mini

./: Cargo.toml  build.rs
src/: lib.rs  mh.rs  util.rs
src/hooks/: dx11.rs  dx12.rs  dx9.rs  mod.rs  opengl3.rs
src/renderer/: mod.rs  pipeline.rs
src/renderer/backend/: dx11.rs  dx12.rs  dx9.rs  opengl3.rs
