[package]
name = "hudhook-mini"
version = "0.7.0"
edition = "2021"
description = "A graphics API hook with dear imgui render loop. Supports DirectX 9, 11, 12, and OpenGL 3."
homepage = "https://github.com/veeenu/hudhook"
repository = "https://github.com/veeenu/hudhook"
documentation = "https://veeenu.github.io/hudhook"
license-file = "LICENSE"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]

[features]
default = ["dx9", "dx11", "dx12", "opengl3"]
dx9 = []
dx11 = []
dx12 = []
opengl3 = ["dep:gl_generator"]

[dependencies]
imgui = "0.12.0"
once_cell = { version = "1.19.0", default-features = false, features = ["std"] }
parking_lot = "0.12.3"
minhook_raw = "0.3.0"

[dependencies.windows]
version = "0.56.0"
features = [
  "Foundation_Numerics",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_OpenGL",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
]


[build-dependencies]
gl_generator = { version = "0.14.0", optional = true }


# TODO: remove this once the fix to imgui-rs/imgui-rs#775 gets released.
[patch.'crates-io']
imgui = { git = "https://github.com/imgui-rs/imgui-rs", rev = "cb8beeb" }
